--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Match - Online Tutorials</title>
-git 
   <link rel="shortcut icon" href="./images/Favicon/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <link rel="stylesheet" href="./css/home.css" />
+  <link rel="stylesheet" href="./assets/CSS/home.css" />
 
 </head>
 
@@ -83,7 +82,7 @@ git
             <li><a href="./html/Portfolio.html" target="_blank">Personal-Portfolio</a></li>
             <li><a href="./html/Blog.html" target="_blank">Blog</a></li>
             <li><a href="./html/Careers.html" target="_blank">Careers</a></li>
-            <li><a href="./html/visit-owner.html" class="h" target="_blank">visit-owner</a></li>  
+            <li><a href="./html/visit-owner.html" class="h" target="_blank">visit-owner</a></li>
             <!-- Add more list items as needed -->
           </ul>
         </div>
